# llvm-lstm

./: .gitignore  Cargo.toml  README.md  USAGE.md  eval  features.json  make_slides.py  pool_eval.json  pool_features.json  presentation.pptx  sweep.sh  train.txt  usage.md
achievable/: array_reduction.c  binary_tree.c  bitfield_ops.c  fft.c  graph_bfs.c  interpreter.c  struct_pack.c
benchmarks/: array_reduction.c  binary_search.c  binary_tree.c  branch_chain.c  convolution.c  crc32.c  csv_parser.c  dead_store_elim.c  deep_call_chain.c  dot_product.c  fft.c  float_interp.c  graph_bfs.c  hashtable.c  heap_ops.c  huffman.c  json_tokenizer.c  karatsuba.c  kmp_search.c  levenshtein.c  matrix_multiply.c  matrix_multiply_tiled.c  mergesort.c  miniray.c  nqueens.c  physics_sim.c  polynomial_eval.c  quicksort.c  regex_match.c  select_chain.c  struct_pack.c  tail_recursive.c
configs/: passes.toml
data/exploratory/: baselines.jsonl  exploratory.jsonl
data/exploratory/_work/: binary_search.ll  binary_search_opt.ll  binary_tree.ll  binary_tree_opt.ll  csv_parser.ll  csv_parser_opt.ll  dot_product.ll  dot_product_opt.ll  fft.ll  (+25 more)
eda_output/: function_stats.json  ir_features_summary.json  pass_impact.json  pass_ordering.json  report.txt
memory/: MEMORY.md  feedback_glob_scope.md
pool/: byte_swap.c  lz_compress.c  matrix_chain.c  matrix_multiply_tiled.c  quicksort.c  rle_codec.c  stencil2d.c  tail_recursive.c  trig_approx.c
predictor_checkpoints/: best_model.mpk  config.json  train.jsonl
report/: main.tex  midterm.tex  refs.bib
report/figures/: arch.tikz  returns.tikz
sample-benchmarks/: nqueens.c
scripts/: plot_bench_noise.py  plot_dataset.py  plot_diagnose.py  plot_eda.py  plot_eval.py  plot_features.py  plot_ir_corr.py  plot_predictor.py  plot_train.py  plot_training.py
smaller/: config.json
src/: actor_critic.rs  actor_critic_tfx.rs  baseline.rs  config.rs  critic.rs  dataset.rs  eda.rs  env.rs  episode_store.rs  evaluation.rs  ir_features.rs  main.rs  ordering_study.rs  pass_menu.rs  pipeline.rs  plots.rs  ppo.rs  returns.rs  rollout.rs  tfx_critic.rs  train.rs  training.rs  training_tfx.rs
src/llvm/: benchmark.rs  functions.rs  ir.rs  mod.rs  pass.rs  top_sequences.rs
src/model/: actor_critic.rs  mod.rs  policy.rs  value.rs
src/ppo/: checkpoint.rs  episode.rs  flat_batch.rs  logging.rs  metrics.rs  mod.rs  noop.rs  step.rs  tokens.rs
src/predictor/: data.rs  mod.rs  model.rs  train.rs
test-benchmarks/: bench_timing.h
train-benchmarks/: kmp_search.c
(+27 files in other folders)
