[package]
name = "llvm-lstm"
version = "0.1.0"
edition = "2024"

[features]
# Expand the action space from 28 to 86 with a secondary pass set.
# Primary (always on): 27 high-impact, C-oriented passes + Stop = 28 actions.
# Secondary (this feature): 57 additional passes covering interprocedural,
# coroutine, module-level, and niche function passes + new Stop = 86 actions.
# Enable when the primary set converges but still leaves room to improve.
secondary_passes = []
# Switch transformer training to the Wgpu GPU backend (Vulkan/Metal/DX12).
# GRU training remains on CPU NdArray regardless.
# Usage: cargo build --release --features wgpu
wgpu = ["burn/wgpu"]

[dependencies]
burn = { version = "0.20.1", features = ["ndarray", "autodiff"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rayon = "1"
anyhow = "1"
indicatif = "0.18"
