[package]
name = "llvm-lstm"
version = "0.1.0"
edition = "2024"

[features]
default = ["auto-tfx"]
# Autoregressive transformer: step-by-step, sees updated IR at each step.
auto-tfx = []
# Autoregressive GRU: recurrent hidden state, sees updated IR at each step.
auto-gru = []
# Switch transformer training to the Wgpu GPU backend (Vulkan/Metal/DX12).
# GRU training remains on CPU NdArray regardless.
# Usage: cargo build --release --features wgpu
wgpu = ["burn/wgpu"]

[dependencies]
burn = { version = "0.20.1", features = ["ndarray", "autodiff", "wgpu", "dataset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.10"
anyhow = "1"
indicatif = "0.18"
owo-colors = "4"
dashmap = { version = "6", features = ["serde"] }
bincode = "1"
rayon = "1"
